# sentinelpass

./: - victortoolsjira_tool.py (lines 1-.txt  .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SECURITY_ARCHITECTURE.md  SUPPORT.md  TECHNICAL_DEBT.md  install-daemon-service.ps1  install-user.cmd  install-user.command  install-user.sh  install.ps1  install.sh  justfile  package-lock.json  package.json  passwordmanager_prompt.txt  register-chrome.ps1  register-firefox.ps1  setup-xcode.sh  tsconfig.web.json  update-extension-id.ps1  vitest.config.ts
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  branch-protection.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/setup-rust-env/: action.yml
.github/workflows/: android.yml  extension-e2e.yml  ios.yml  python.yml  release-preflight.yml  release.yml  rust.yml  security.yml
android/: .gitignore  build-libs.sh  run-emulator.sh  setup-android-studio.sh  verify-android-setup.sh
android/SentinelPass/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/SentinelPass/app/: build.gradle.kts  proguard-rules.pro
android/SentinelPass/app/src/main/: AndroidManifest.xml
android/SentinelPass/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/SentinelPass/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
blogs/: 2026-02-sentinelpass-launch.md  README.md
browser-extension/chrome/: DEBUGGING.md  background.js  background.ts  content.js  content.ts  logger.ts  manifest.json  popup.html  popup.js  popup.ts  save-heuristics.js  save-heuristics.ts  styles.css
browser-extension/e2e/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
browser-extension/e2e/tests/: content-script-logic.spec.ts  puppeteer-extension.spec.ts  save-prompt.spec.ts  verify-release-downloads.spec.ts
browser-extension/firefox/: background.js  background.ts  content.js  content.ts  manifest.json  popup.html  popup.js  popup.ts  styles.css
docs/: ANDROID_BUILD_GUIDE.md  GAP_REVIEW_2026-02-26.md  IMPLEMENTATION_PLAN.md  MOBILE_BRIDGE_USAGE.md  MOBILE_DESIGN.md  MOBILE_TESTING_GUIDE.md  OSS_COMMERCIAL_STRATEGY.md  OSS_RELEASE_CHECKLIST.md  PRD.md  README.md  REQUIREMENTS.md  SOLUTION_DESIGN.md  SYNC.md  iOS_BUILD_GUIDE.md
installation/: com.passwordmanager.host.json  install.ps1  install.sh
ios/SentinelPass/: Package.swift  README.md  sentinelpass.modulemap
ios/SentinelPass/SentinelPass/: ContentView.swift  Info.plist  SentinelPassApp.swift
ios/SentinelPass/SentinelPass/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/SentinelPass/SentinelPass/Models/: EntryModel.swift  VaultState.swift
ios/SentinelPass/SentinelPass/Services/: BiometricAuth.swift
ios/SentinelPass/SentinelPass/Views/: AddEntryView.swift  EditEntryView.swift  EntriesList.swift  EntryDetailView.swift  GeneratorView.swift  LockView.swift  PasswordGeneratorView.swift  SettingsView.swift  SetupView.swift  TotpList.swift
ios/SentinelPass/SentinelPassApp.xcodeproj/: project.pbxproj
ios/SentinelPass/SentinelPassApp.xcodeproj/xcshareddata/xcschemes/: SentinelPassApp.xcscheme
ios/SentinelPass/SentinelPassBridge/: CloudKitService.swift  VaultBridge.swift
ios/SentinelPass/SentinelPassTests/: SentinelPassTests.swift
migrations/: v1_initial.sql
native-host/: com.passwordmanager.host.firefox.json.template  com.passwordmanager.host.json  com.passwordmanager.host.json.template
scripts/: build-native-installers.ps1  build-native-installers.sh  coverage-rust.sh  lint-rust.sh  lint-web.sh  postprocess-web-build.mjs  security-audit.sh  test-rust.sh  test-web.sh
sentinelpass-cli/: Cargo.toml
sentinelpass-cli/src/: main.rs
sentinelpass-core/: Cargo.toml
sentinelpass-core/src/: audit.rs  biometric.rs  import_export.rs  lib.rs  lockout.rs  platform.rs  ssh.rs  totp.rs  vault.rs
sentinelpass-core/src/autofill/: linux.rs  macos.rs  mod.rs  windows.rs
sentinelpass-core/src/crypto/: cipher.rs  health.rs  kdf.rs  keyring.rs  mod.rs  password.rs  strength.rs  zero.rs
sentinelpass-core/src/daemon/: autolock.rs  ipc.rs  mod.rs  native_messaging.rs  vault_state.rs
sentinelpass-core/src/daemon/transport/: mod.rs  unix.rs  windows.rs
sentinelpass-core/src/database/: migrations.rs  mod.rs  models.rs  repository.rs  schema.rs
sentinelpass-core/src/keepass/: mod.rs  xml.rs
sentinelpass-core/src/sync/: auth.rs  change_tracker.rs  client.rs  config.rs  conflict.rs  crypto.rs  device.rs  engine.rs  mod.rs  models.rs  pairing.rs
sentinelpass-core/src/vault/: biometric_ops.rs  mod.rs  ssh_ops.rs  tests.rs  totp_ops.rs
sentinelpass-daemon/: Cargo.toml
sentinelpass-daemon/src/: main.rs
sentinelpass-host/: Cargo.toml
sentinelpass-host/src/: main.rs
sentinelpass-mobile-bridge/: Cargo.toml  build.rs  cbindgen.toml
sentinelpass-mobile-bridge/include/: sentinelpass_bridge.h
sentinelpass-mobile-bridge/src/: bridge.rs  drive.rs  error.rs  ffi.rs  icloud.rs  jni.rs  lib.rs
sentinelpass-mobile-bridge/tests/: integration_test.rs
sentinelpass-mobile-bridge/tests/integration/: bridge_tests.rs  mod.rs
sentinelpass-relay/: Cargo.toml
sentinelpass-relay/src/: app_state.rs  auth.rs  cleanup.rs  config.rs  error.rs  main.rs  pairing_security.rs  rate_limit.rs  server.rs
sentinelpass-relay/src/handlers/: devices.rs  mod.rs  pairing.rs  sync.rs
sentinelpass-relay/src/storage/: mod.rs  models.rs
sentinelpass-ui/: Cargo.toml  README.md  app.js  app.ts  entries.ts  index.html  state.ts  tauri.conf.json  totp.js  totp.ts  url-utils.js  url-utils.ts  utils.js  utils.ts
sentinelpass-ui/capabilities/: default.json
sentinelpass-ui/icons/: icon.icns
sentinelpass-ui/src-tauri/: main.rs
sentinelpass-ui/src-tauri/src/: main.rs
tests/web/: save-heuristics.test.ts  url-utils.test.ts
types/: legacy-dom-compat.d.ts  tauri.d.ts
(+23 files in other folders)
