[workspace]
members = [
    "sentinelpass-core",
    "sentinelpass-cli",
    "sentinelpass-daemon",
    "sentinelpass-host",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VJ Singh <singhvjd@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/vjsingh1984/sentinelpass"
homepage = "https://github.com/vjsingh1984/sentinelpass"
description = "A secure, local-first password manager with browser autofill"
keywords = ["password", "security", "vault", "autofill"]
categories = ["command-line-utilities", "authentication"]

[workspace.dependencies]
# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
memsec = "0.6"
subtle = "2.5"
hex = "0.4"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform directories
dirs = "5.0"

# Binary serialization
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Password prompting
rpassword = "7.3"
dialoguer = "0.11"

# Home directory
home = "0.5"

# Testing
proptest = "1.4"
