[package]
name = "sentinelpass-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "sentinelpass"
path = "src/main.rs"

[dependencies]
sentinelpass-core = { path = "../sentinelpass-core" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rpassword = { workspace = true }
dialoguer = { workspace = true }
home = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
