[package]
name = "sentinelpass-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
argon2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
memsec = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }
rusqlite = { workspace = true }
refinery = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
bincode = { workspace = true }

# SSH keys
ssh-key = { workspace = true }
rsa = { workspace = true }
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hmac = { workspace = true }
data-encoding = { workspace = true }
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Credentials",
    "Win32_Foundation",
    "Win32_System_Com",
    "Foundation",
    "Security_Credentials_UI"
] }
keyring = "2.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"
core-foundation = "0.10"
security-framework = "2.11"
keyring = "2.3"
block = "0.1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("cargo-clippy"))']

[dev-dependencies]
proptest = { workspace = true }
