[package]
name = "sentinelpass-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "sentinelpass-host"
path = "src/main.rs"

[dependencies]
sentinelpass-core = { path = "../sentinelpass-core" }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
