[package]
name = "sentinelpass-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "sentinelpass-ui"
path = "src-tauri/main.rs"

[dependencies]
sentinelpass-core = { path = "../sentinelpass-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies.tauri]
version = "2.0"
features = ["tray-icon"]

[dependencies.tauri-plugin-shell]
version = "2.0"

[dependencies.tauri-plugin-dialog]
version = "2.0"

[dependencies.tauri-plugin-clipboard-manager]
version = "2.0"
