[package]
name = "sentinelpass-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "sentinelpass-ui"
path = "src-tauri/src/main.rs"

[dependencies]
sentinelpass-core = { path = "../sentinelpass-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
